--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>todolist</title>
   <link rel="stylesheet" href="./styles.css">
+  <script src="index.js"></script>
 </head>
 <body>
   <div class="calender">
@@ -40,6 +41,5 @@
       </div>
     </div>
   </div>
-  <script src="index.js"></script>
 </body>
 </html>
